{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 96,
  "lineage": "3b6a475d-bcc8-a3ed-d01a-6734c98a1131",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "spoke_local_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/local-spoke-rg/providers/Microsoft.Network/routeTables/local-spoke-rtb",
            "location": "eastus",
            "name": "local-spoke-rtb",
            "resource_group_name": "local-spoke-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "route0",
                "next_hop_in_ip_address": "10.0.2.100",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.0.0.0/8",
                "name": "route1",
                "next_hop_in_ip_address": "10.0.2.100",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "172.16.0.0/12",
                "name": "route2",
                "next_hop_in_ip_address": "10.0.2.100",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "192.168.0.0/16",
                "name": "route3",
                "next_hop_in_ip_address": "10.0.2.100",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.spoke_local_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "security_outbound_to_spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/virtualNetworks/security-outbound-vnet/virtualNetworkPeerings/security-outbound-vnet-local-spoke-vnet",
            "name": "security-outbound-vnet-local-spoke-vnet",
            "remote_virtual_network_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/local-spoke-rg/providers/Microsoft.Network/virtualNetworks/local-spoke-vnet",
            "resource_group_name": "security-outbound-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "security-outbound-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "azurerm_resource_group.spoke_local_rg",
            "module.security_outbound_vnet.azurerm_virtual_network.main",
            "module.spoke_local_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke_local_to_security_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/local-spoke-rg/providers/Microsoft.Network/virtualNetworks/local-spoke-vnet/virtualNetworkPeerings/local-spoke-vnet-security-outbound-vnet",
            "name": "local-spoke-vnet-security-outbound-vnet",
            "remote_virtual_network_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/virtualNetworks/security-outbound-vnet",
            "resource_group_name": "local-spoke-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "local-spoke-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "azurerm_resource_group.spoke_local_rg",
            "module.security_outbound_vnet.azurerm_virtual_network.main",
            "module.spoke_local_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_extlb",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/frontendIPConfigurations/LoadBalancerFrontEnd",
                "name": "LoadBalancerFrontEnd",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/publicIPAddresses/security-inbound-public-lb-pip"
              }
            ],
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb",
            "location": "eastus",
            "name": "security-inbound-public-lb",
            "resource_group_name": "security-inbound-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_extlb.azurerm_public_ip.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_extlb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/backendAddressPools/LoadBalancerBackendPool",
            "loadbalancer_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb",
            "name": "LoadBalancerBackendPool",
            "resource_group_name": "security-inbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_extlb.azurerm_lb.main",
            "module.security_inbound_extlb.azurerm_public_ip.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_extlb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/probes/HealthProbe-22",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb",
            "name": "HealthProbe-22",
            "number_of_probes": 2,
            "port": 22,
            "protocol": "Tcp",
            "resource_group_name": "security-inbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_extlb.azurerm_lb.main",
            "module.security_inbound_extlb.azurerm_public_ip.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_extlb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/backendAddressPools/LoadBalancerBackendPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": true,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 80,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/loadBalancingRules/rule-0",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb",
            "name": "rule-0",
            "probe_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/probes/HealthProbe-22",
            "protocol": "Tcp",
            "resource_group_name": "security-inbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_extlb.azurerm_lb.main",
            "module.security_inbound_extlb.azurerm_lb_backend_address_pool.main",
            "module.security_inbound_extlb.azurerm_lb_probe.main",
            "module.security_inbound_extlb.azurerm_public_ip.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/backendAddressPools/LoadBalancerBackendPool",
            "backend_port": 22,
            "disable_outbound_snat": false,
            "enable_floating_ip": true,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 22,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/loadBalancingRules/rule-1",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb",
            "name": "rule-1",
            "probe_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/probes/HealthProbe-22",
            "protocol": "Tcp",
            "resource_group_name": "security-inbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_extlb.azurerm_lb.main",
            "module.security_inbound_extlb.azurerm_lb_backend_address_pool.main",
            "module.security_inbound_extlb.azurerm_lb_probe.main",
            "module.security_inbound_extlb.azurerm_public_ip.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/backendAddressPools/LoadBalancerBackendPool",
            "backend_port": 443,
            "disable_outbound_snat": false,
            "enable_floating_ip": true,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 443,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/loadBalancingRules/rule-2",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb",
            "name": "rule-2",
            "probe_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/probes/HealthProbe-22",
            "protocol": "Tcp",
            "resource_group_name": "security-inbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_extlb.azurerm_lb.main",
            "module.security_inbound_extlb.azurerm_lb_backend_address_pool.main",
            "module.security_inbound_extlb.azurerm_lb_probe.main",
            "module.security_inbound_extlb.azurerm_public_ip.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_extlb",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/backendAddressPools/LoadBalancerBackendPool",
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm1-nic1/ipConfigurations/ipconfig1|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/backendAddressPools/LoadBalancerBackendPool",
            "ip_configuration_name": "ipconfig1",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm1-nic1"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_extlb.azurerm_lb.main",
            "module.security_inbound_extlb.azurerm_lb_backend_address_pool.main",
            "module.security_inbound_extlb.azurerm_public_ip.main",
            "module.security_inbound_fw.azurerm_network_interface.nic1",
            "module.security_inbound_fw.azurerm_public_ip.nic1",
            "module.security_inbound_vnet.azurerm_subnet.main",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/backendAddressPools/LoadBalancerBackendPool",
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm2-nic1/ipConfigurations/ipconfig1|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/loadBalancers/security-inbound-public-lb/backendAddressPools/LoadBalancerBackendPool",
            "ip_configuration_name": "ipconfig1",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm2-nic1"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_extlb.azurerm_lb.main",
            "module.security_inbound_extlb.azurerm_lb_backend_address_pool.main",
            "module.security_inbound_extlb.azurerm_public_ip.main",
            "module.security_inbound_fw.azurerm_network_interface.nic1",
            "module.security_inbound_fw.azurerm_public_ip.nic1",
            "module.security_inbound_vnet.azurerm_subnet.main",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_extlb",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/publicIPAddresses/security-inbound-public-lb-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.75.134.197",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "security-inbound-public-lb-pip",
            "resource_group_name": "security-inbound-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_fw",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm1-nic0",
            "internal_domain_name_suffix": "aijgj1xtr5ee1lklckaodbprvd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "192.168.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/publicIPAddresses/security-inbound-vm1-nic0-pip",
                "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/virtualNetworks/security-inbound-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "name": "security-inbound-vm1-nic0",
            "private_ip_address": "192.168.0.4",
            "private_ip_addresses": [
              "192.168.0.4"
            ],
            "resource_group_name": "security-inbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_fw.azurerm_public_ip.nic0",
            "module.security_inbound_vnet.azurerm_subnet.main",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm2-nic0",
            "internal_domain_name_suffix": "aijgj1xtr5ee1lklckaodbprvd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "192.168.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/publicIPAddresses/security-inbound-vm2-nic0-pip",
                "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/virtualNetworks/security-inbound-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "name": "security-inbound-vm2-nic0",
            "private_ip_address": "192.168.0.5",
            "private_ip_addresses": [
              "192.168.0.5"
            ],
            "resource_group_name": "security-inbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_fw.azurerm_public_ip.nic0",
            "module.security_inbound_vnet.azurerm_subnet.main",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_fw",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm1-nic1",
            "internal_domain_name_suffix": "aijgj1xtr5ee1lklckaodbprvd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "192.168.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/virtualNetworks/security-inbound-vnet/subnets/untrust"
              }
            ],
            "location": "eastus",
            "name": "security-inbound-vm1-nic1",
            "private_ip_address": "192.168.1.5",
            "private_ip_addresses": [
              "192.168.1.5"
            ],
            "resource_group_name": "security-inbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_fw.azurerm_public_ip.nic1",
            "module.security_inbound_vnet.azurerm_subnet.main",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm2-nic1",
            "internal_domain_name_suffix": "aijgj1xtr5ee1lklckaodbprvd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/virtualNetworks/security-inbound-vnet/subnets/untrust"
              }
            ],
            "location": "eastus",
            "name": "security-inbound-vm2-nic1",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "security-inbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_fw.azurerm_public_ip.nic1",
            "module.security_inbound_vnet.azurerm_subnet.main",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_fw",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm1-nic2",
            "internal_domain_name_suffix": "aijgj1xtr5ee1lklckaodbprvd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "192.168.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/virtualNetworks/security-inbound-vnet/subnets/trust"
              }
            ],
            "location": "eastus",
            "name": "security-inbound-vm1-nic2",
            "private_ip_address": "192.168.2.4",
            "private_ip_addresses": [
              "192.168.2.4"
            ],
            "resource_group_name": "security-inbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_fw.azurerm_public_ip.nic2",
            "module.security_inbound_vnet.azurerm_subnet.main",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm2-nic2",
            "internal_domain_name_suffix": "aijgj1xtr5ee1lklckaodbprvd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "192.168.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/virtualNetworks/security-inbound-vnet/subnets/trust"
              }
            ],
            "location": "eastus",
            "name": "security-inbound-vm2-nic2",
            "private_ip_address": "192.168.2.5",
            "private_ip_addresses": [
              "192.168.2.5"
            ],
            "resource_group_name": "security-inbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_fw.azurerm_public_ip.nic2",
            "module.security_inbound_vnet.azurerm_subnet.main",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_fw",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm1-nic0|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-inbound-vm-nsg-mgmt",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm1-nic0",
            "network_security_group_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-inbound-vm-nsg-mgmt"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_fw.azurerm_network_interface.nic0",
            "module.security_inbound_fw.azurerm_network_security_group.mgmt",
            "module.security_inbound_fw.azurerm_public_ip.nic0",
            "module.security_inbound_vnet.azurerm_subnet.main",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm2-nic0|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-inbound-vm-nsg-mgmt",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm2-nic0",
            "network_security_group_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-inbound-vm-nsg-mgmt"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_fw.azurerm_network_interface.nic0",
            "module.security_inbound_fw.azurerm_network_security_group.mgmt",
            "module.security_inbound_fw.azurerm_public_ip.nic0",
            "module.security_inbound_vnet.azurerm_subnet.main",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_fw",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm1-nic1|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-inbound-vm-nsg-data",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm1-nic1",
            "network_security_group_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-inbound-vm-nsg-data"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_fw.azurerm_network_interface.nic1",
            "module.security_inbound_fw.azurerm_network_security_group.data",
            "module.security_inbound_fw.azurerm_public_ip.nic1",
            "module.security_inbound_vnet.azurerm_subnet.main",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm2-nic1|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-inbound-vm-nsg-data",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm2-nic1",
            "network_security_group_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-inbound-vm-nsg-data"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_fw.azurerm_network_interface.nic1",
            "module.security_inbound_fw.azurerm_network_security_group.data",
            "module.security_inbound_fw.azurerm_public_ip.nic1",
            "module.security_inbound_vnet.azurerm_subnet.main",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_fw",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm1-nic2|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-inbound-vm-nsg-data",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm1-nic2",
            "network_security_group_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-inbound-vm-nsg-data"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_fw.azurerm_network_interface.nic2",
            "module.security_inbound_fw.azurerm_network_security_group.data",
            "module.security_inbound_fw.azurerm_public_ip.nic2",
            "module.security_inbound_vnet.azurerm_subnet.main",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm2-nic2|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-inbound-vm-nsg-data",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkInterfaces/security-inbound-vm2-nic2",
            "network_security_group_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-inbound-vm-nsg-data"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_fw.azurerm_network_interface.nic2",
            "module.security_inbound_fw.azurerm_network_security_group.data",
            "module.security_inbound_fw.azurerm_public_ip.nic2",
            "module.security_inbound_vnet.azurerm_subnet.main",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_fw",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-inbound-vm-nsg-data",
            "location": "eastus",
            "name": "security-inbound-vm-nsg-data",
            "resource_group_name": "security-inbound-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "data-inbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "data-outbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_fw",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-inbound-vm-nsg-mgmt",
            "location": "eastus",
            "name": "security-inbound-vm-nsg-mgmt",
            "resource_group_name": "security-inbound-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "443"
                ],
                "direction": "Inbound",
                "name": "mgmt-inbound",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_fw",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nic0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/publicIPAddresses/security-inbound-vm1-nic0-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.62.247.8",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "security-inbound-vm1-nic0-pip",
            "resource_group_name": "security-inbound-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/publicIPAddresses/security-inbound-vm2-nic0-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.75.134.203",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "security-inbound-vm2-nic0-pip",
            "resource_group_name": "security-inbound-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.0.0/24",
            "address_prefixes": [
              "192.168.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/virtualNetworks/security-inbound-vnet/subnets/mgmt",
            "name": "mgmt",
            "resource_group_name": "security-inbound-rg",
            "virtual_network_name": "security-inbound-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/24",
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/virtualNetworks/security-inbound-vnet/subnets/untrust",
            "name": "untrust",
            "resource_group_name": "security-inbound-rg",
            "virtual_network_name": "security-inbound-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.2.0/24",
            "address_prefixes": [
              "192.168.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/virtualNetworks/security-inbound-vnet/subnets/trust",
            "name": "trust",
            "resource_group_name": "security-inbound-rg",
            "virtual_network_name": "security-inbound-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg",
            "module.security_inbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_inbound_vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/22"
            ],
            "guid": "ee641202-8ff3-4dc8-ad4b-1280e185f1ab",
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-inbound-rg/providers/Microsoft.Network/virtualNetworks/security-inbound-vnet",
            "location": "eastus",
            "name": "security-inbound-vnet",
            "resource_group_name": "security-inbound-rg",
            "tags": {
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.security_inbound_rg"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_fw",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm1-nic0",
            "internal_domain_name_suffix": "uwhjheeu3lgu1kt5hdbpg3bwwe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/publicIPAddresses/security-outbound-vm1-nic0-pip",
                "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/virtualNetworks/security-outbound-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "name": "security-outbound-vm1-nic0",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "security-outbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_fw.azurerm_public_ip.nic0",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm2-nic0",
            "internal_domain_name_suffix": "uwhjheeu3lgu1kt5hdbpg3bwwe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/publicIPAddresses/security-outbound-vm2-nic0-pip",
                "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/virtualNetworks/security-outbound-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "name": "security-outbound-vm2-nic0",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "security-outbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_fw.azurerm_public_ip.nic0",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_fw",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm1-nic1",
            "internal_domain_name_suffix": "uwhjheeu3lgu1kt5hdbpg3bwwe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/publicIPAddresses/security-outbound-vm1-nic1-pip",
                "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/virtualNetworks/security-outbound-vnet/subnets/untrust"
              }
            ],
            "location": "eastus",
            "name": "security-outbound-vm1-nic1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "security-outbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_fw.azurerm_public_ip.nic1",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm2-nic1",
            "internal_domain_name_suffix": "uwhjheeu3lgu1kt5hdbpg3bwwe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/publicIPAddresses/security-outbound-vm2-nic1-pip",
                "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/virtualNetworks/security-outbound-vnet/subnets/untrust"
              }
            ],
            "location": "eastus",
            "name": "security-outbound-vm2-nic1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "security-outbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_fw.azurerm_public_ip.nic1",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_fw",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm1-nic2",
            "internal_domain_name_suffix": "uwhjheeu3lgu1kt5hdbpg3bwwe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/virtualNetworks/security-outbound-vnet/subnets/trust"
              }
            ],
            "location": "eastus",
            "name": "security-outbound-vm1-nic2",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "security-outbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_fw.azurerm_public_ip.nic2",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm2-nic2",
            "internal_domain_name_suffix": "uwhjheeu3lgu1kt5hdbpg3bwwe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/virtualNetworks/security-outbound-vnet/subnets/trust"
              }
            ],
            "location": "eastus",
            "name": "security-outbound-vm2-nic2",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "security-outbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_fw.azurerm_public_ip.nic2",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_fw",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm1-nic0|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-outbound-vm-nsg-mgmt",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm1-nic0",
            "network_security_group_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-outbound-vm-nsg-mgmt"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_fw.azurerm_network_interface.nic0",
            "module.security_outbound_fw.azurerm_network_security_group.mgmt",
            "module.security_outbound_fw.azurerm_public_ip.nic0",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm2-nic0|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-outbound-vm-nsg-mgmt",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm2-nic0",
            "network_security_group_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-outbound-vm-nsg-mgmt"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_fw.azurerm_network_interface.nic0",
            "module.security_outbound_fw.azurerm_network_security_group.mgmt",
            "module.security_outbound_fw.azurerm_public_ip.nic0",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_fw",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm1-nic1|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-outbound-vm-nsg-data",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm1-nic1",
            "network_security_group_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-outbound-vm-nsg-data"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_fw.azurerm_network_interface.nic1",
            "module.security_outbound_fw.azurerm_network_security_group.data",
            "module.security_outbound_fw.azurerm_public_ip.nic1",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm2-nic1|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-outbound-vm-nsg-data",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm2-nic1",
            "network_security_group_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-outbound-vm-nsg-data"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_fw.azurerm_network_interface.nic1",
            "module.security_outbound_fw.azurerm_network_security_group.data",
            "module.security_outbound_fw.azurerm_public_ip.nic1",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_fw",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm1-nic2|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-outbound-vm-nsg-data",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm1-nic2",
            "network_security_group_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-outbound-vm-nsg-data"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_fw.azurerm_network_interface.nic2",
            "module.security_outbound_fw.azurerm_network_security_group.data",
            "module.security_outbound_fw.azurerm_public_ip.nic2",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm2-nic2|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-outbound-vm-nsg-data",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm2-nic2",
            "network_security_group_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-outbound-vm-nsg-data"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_fw.azurerm_network_interface.nic2",
            "module.security_outbound_fw.azurerm_network_security_group.data",
            "module.security_outbound_fw.azurerm_public_ip.nic2",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_fw",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-outbound-vm-nsg-data",
            "location": "eastus",
            "name": "security-outbound-vm-nsg-data",
            "resource_group_name": "security-outbound-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "data-inbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "data-outbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_fw",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkSecurityGroups/security-outbound-vm-nsg-mgmt",
            "location": "eastus",
            "name": "security-outbound-vm-nsg-mgmt",
            "resource_group_name": "security-outbound-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "443"
                ],
                "direction": "Inbound",
                "name": "mgmt-inbound",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_fw",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nic0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/publicIPAddresses/security-outbound-vm1-nic0-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.75.134.228",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "security-outbound-vm1-nic0-pip",
            "resource_group_name": "security-outbound-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/publicIPAddresses/security-outbound-vm2-nic0-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.75.134.227",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "security-outbound-vm2-nic0-pip",
            "resource_group_name": "security-outbound-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_fw",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/publicIPAddresses/security-outbound-vm1-nic1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.75.134.245",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "security-outbound-vm1-nic1-pip",
            "resource_group_name": "security-outbound-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/publicIPAddresses/security-outbound-vm2-nic1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.75.134.212",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "security-outbound-vm2-nic1-pip",
            "resource_group_name": "security-outbound-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_fw",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.security_outbound_intlb",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/loadBalancers/security-outbound-internal-lb/frontendIPConfigurations/LoadBalancerFrontEnd",
                "name": "LoadBalancerFrontEnd",
                "private_ip_address": "10.0.2.100",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/virtualNetworks/security-outbound-vnet/subnets/trust"
              }
            ],
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/loadBalancers/security-outbound-internal-lb",
            "location": "eastus",
            "name": "security-outbound-internal-lb",
            "private_ip_address": "10.0.2.100",
            "private_ip_addresses": [
              "10.0.2.100"
            ],
            "resource_group_name": "security-outbound-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_intlb.azurerm_public_ip.main",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_intlb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/loadBalancers/security-outbound-internal-lb/backendAddressPools/LoadBalancerBackendPool",
            "loadbalancer_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/loadBalancers/security-outbound-internal-lb",
            "name": "LoadBalancerBackendPool",
            "resource_group_name": "security-outbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_intlb.azurerm_lb.main",
            "module.security_outbound_intlb.azurerm_public_ip.main",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_intlb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/loadBalancers/security-outbound-internal-lb/probes/HealthProbe-22",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/loadBalancers/security-outbound-internal-lb",
            "name": "HealthProbe-22",
            "number_of_probes": 2,
            "port": 22,
            "protocol": "Tcp",
            "resource_group_name": "security-outbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_intlb.azurerm_lb.main",
            "module.security_outbound_intlb.azurerm_public_ip.main",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_intlb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/loadBalancers/security-outbound-internal-lb/backendAddressPools/LoadBalancerBackendPool",
            "backend_port": 0,
            "disable_outbound_snat": false,
            "enable_floating_ip": true,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/loadBalancers/security-outbound-internal-lb/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 0,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/loadBalancers/security-outbound-internal-lb/loadBalancingRules/rule-0",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/loadBalancers/security-outbound-internal-lb",
            "name": "rule-0",
            "probe_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/loadBalancers/security-outbound-internal-lb/probes/HealthProbe-22",
            "protocol": "All",
            "resource_group_name": "security-outbound-rg"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_intlb.azurerm_lb.main",
            "module.security_outbound_intlb.azurerm_lb_backend_address_pool.main",
            "module.security_outbound_intlb.azurerm_lb_probe.main",
            "module.security_outbound_intlb.azurerm_public_ip.main",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_intlb",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/loadBalancers/security-outbound-internal-lb/backendAddressPools/LoadBalancerBackendPool",
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm1-nic2/ipConfigurations/ipconfig1|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/loadBalancers/security-outbound-internal-lb/backendAddressPools/LoadBalancerBackendPool",
            "ip_configuration_name": "ipconfig1",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm1-nic2"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_fw.azurerm_network_interface.nic2",
            "module.security_outbound_fw.azurerm_public_ip.nic2",
            "module.security_outbound_intlb.azurerm_lb.main",
            "module.security_outbound_intlb.azurerm_lb_backend_address_pool.main",
            "module.security_outbound_intlb.azurerm_public_ip.main",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/loadBalancers/security-outbound-internal-lb/backendAddressPools/LoadBalancerBackendPool",
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm2-nic2/ipConfigurations/ipconfig1|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/loadBalancers/security-outbound-internal-lb/backendAddressPools/LoadBalancerBackendPool",
            "ip_configuration_name": "ipconfig1",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/networkInterfaces/security-outbound-vm2-nic2"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_fw.azurerm_network_interface.nic2",
            "module.security_outbound_fw.azurerm_public_ip.nic2",
            "module.security_outbound_intlb.azurerm_lb.main",
            "module.security_outbound_intlb.azurerm_lb_backend_address_pool.main",
            "module.security_outbound_intlb.azurerm_public_ip.main",
            "module.security_outbound_vnet.azurerm_subnet.main",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/virtualNetworks/security-outbound-vnet/subnets/mgmt",
            "name": "mgmt",
            "resource_group_name": "security-outbound-rg",
            "virtual_network_name": "security-outbound-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/virtualNetworks/security-outbound-vnet/subnets/untrust",
            "name": "untrust",
            "resource_group_name": "security-outbound-rg",
            "virtual_network_name": "security-outbound-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/virtualNetworks/security-outbound-vnet/subnets/trust",
            "name": "trust",
            "resource_group_name": "security-outbound-rg",
            "virtual_network_name": "security-outbound-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg",
            "module.security_outbound_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_outbound_vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "90938ea5-ea94-4dcd-aa7f-38c2f37436b4",
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/security-outbound-rg/providers/Microsoft.Network/virtualNetworks/security-outbound-vnet",
            "location": "eastus",
            "name": "security-outbound-vnet",
            "resource_group_name": "security-outbound-rg",
            "tags": {
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.security_outbound_rg"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_local_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/local-spoke-rg/providers/Microsoft.Network/networkInterfaces/local-spoke-vm1-nic0",
            "internal_domain_name_suffix": "5eoqdu2lj0nevph3r1p2lcaeih.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.3.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/local-spoke-rg/providers/Microsoft.Network/virtualNetworks/local-spoke-vnet/subnets/default"
              }
            ],
            "location": "eastus",
            "name": "local-spoke-vm1-nic0",
            "private_ip_address": "10.3.0.4",
            "private_ip_addresses": [
              "10.3.0.4"
            ],
            "resource_group_name": "local-spoke-rg"
          },
          "dependencies": [
            "azurerm_resource_group.spoke_local_rg",
            "module.spoke_local_vm.azurerm_public_ip.main",
            "module.spoke_local_vnet.azurerm_subnet.main",
            "module.spoke_local_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_local_vm",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/local-spoke-rg/providers/Microsoft.Network/networkInterfaces/local-spoke-vm1-nic0|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/local-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/local-spoke-vm-nsg",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/local-spoke-rg/providers/Microsoft.Network/networkInterfaces/local-spoke-vm1-nic0",
            "network_security_group_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/local-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/local-spoke-vm-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.spoke_local_rg",
            "module.spoke_local_vm.azurerm_network_interface.main",
            "module.spoke_local_vm.azurerm_network_security_group.main",
            "module.spoke_local_vm.azurerm_public_ip.main",
            "module.spoke_local_vm.azurerm_virtual_machine.main",
            "module.spoke_local_vnet.azurerm_subnet.main",
            "module.spoke_local_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_local_vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/local-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/local-spoke-vm-nsg",
            "location": "eastus",
            "name": "local-spoke-vm-nsg",
            "resource_group_name": "local-spoke-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "data-inbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "data-outbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.spoke_local_rg"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_local_vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.0.0/24",
            "address_prefixes": [
              "10.3.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/local-spoke-rg/providers/Microsoft.Network/virtualNetworks/local-spoke-vnet/subnets/default",
            "name": "default",
            "resource_group_name": "local-spoke-rg",
            "virtual_network_name": "local-spoke-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke_local_rg",
            "module.spoke_local_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_local_vnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/local-spoke-rg/providers/Microsoft.Network/virtualNetworks/local-spoke-vnet/subnets/default",
            "route_table_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/local-spoke-rg/providers/Microsoft.Network/routeTables/local-spoke-rtb",
            "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/local-spoke-rg/providers/Microsoft.Network/virtualNetworks/local-spoke-vnet/subnets/default"
          },
          "dependencies": [
            "azurerm_resource_group.spoke_local_rg",
            "azurerm_route_table.spoke_local_rtb",
            "module.spoke_local_vnet.azurerm_subnet.main",
            "module.spoke_local_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_local_vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.3.0.0/16"
            ],
            "guid": "d3011df9-4e8b-4a9a-bcfd-8edfc5880447",
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/local-spoke-rg/providers/Microsoft.Network/virtualNetworks/local-spoke-vnet",
            "location": "eastus",
            "name": "local-spoke-vnet",
            "resource_group_name": "local-spoke-rg",
            "tags": {
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.spoke_local_rg"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_wan_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/virtual-wan-spoke-rg/providers/Microsoft.Network/networkInterfaces/virtual-wan-spoke-vm1-nic0",
            "internal_domain_name_suffix": "b5fmeo423pserl1iouwvcnhwqg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.4.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/virtual-wan-spoke-rg/providers/Microsoft.Network/virtualNetworks/virtual-wan-spoke-vnet/subnets/default"
              }
            ],
            "location": "eastus",
            "name": "virtual-wan-spoke-vm1-nic0",
            "private_ip_address": "10.4.0.4",
            "private_ip_addresses": [
              "10.4.0.4"
            ],
            "resource_group_name": "virtual-wan-spoke-rg"
          },
          "dependencies": [
            "azurerm_resource_group.spoke_wan_rg",
            "module.spoke_wan_vm.azurerm_public_ip.main",
            "module.spoke_wan_vnet.azurerm_subnet.main",
            "module.spoke_wan_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_wan_vm",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/virtual-wan-spoke-rg/providers/Microsoft.Network/networkInterfaces/virtual-wan-spoke-vm1-nic0|/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/virtual-wan-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/virtual-wan-spoke-vm-nsg",
            "network_interface_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/virtual-wan-spoke-rg/providers/Microsoft.Network/networkInterfaces/virtual-wan-spoke-vm1-nic0",
            "network_security_group_id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/virtual-wan-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/virtual-wan-spoke-vm-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.spoke_wan_rg",
            "data.template_file.web_startup",
            "module.spoke_wan_vm.azurerm_network_interface.main",
            "module.spoke_wan_vm.azurerm_network_security_group.main",
            "module.spoke_wan_vm.azurerm_public_ip.main",
            "module.spoke_wan_vm.azurerm_virtual_machine.main",
            "module.spoke_wan_vnet.azurerm_subnet.main",
            "module.spoke_wan_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_wan_vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/virtual-wan-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/virtual-wan-spoke-vm-nsg",
            "location": "eastus",
            "name": "virtual-wan-spoke-vm-nsg",
            "resource_group_name": "virtual-wan-spoke-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "data-inbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "data-outbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.spoke_wan_rg"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_wan_vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.4.0.0/24",
            "address_prefixes": [
              "10.4.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/virtual-wan-spoke-rg/providers/Microsoft.Network/virtualNetworks/virtual-wan-spoke-vnet/subnets/default",
            "name": "default",
            "resource_group_name": "virtual-wan-spoke-rg",
            "virtual_network_name": "virtual-wan-spoke-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke_wan_rg",
            "module.spoke_wan_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_wan_vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.4.0.0/16"
            ],
            "guid": "3bc2ca0f-ebdc-48e4-af68-752d5134f686",
            "id": "/subscriptions/137c8c89-2b20-4f91-96df-ae87343bb016/resourceGroups/virtual-wan-spoke-rg/providers/Microsoft.Network/virtualNetworks/virtual-wan-spoke-vnet",
            "location": "eastus",
            "name": "virtual-wan-spoke-vnet",
            "resource_group_name": "virtual-wan-spoke-rg",
            "tags": {
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.spoke_wan_rg"
          ]
        }
      ]
    }
  ]
}